--- a/private/skins/trinium/templates/index.twig
+++ b/private/skins/trinium/templates/index.twig
@@ -1,7 +1,7 @@
 {% extends "_layout.twig" %}
 
 {% block content %}
-    <h1>Welcome to Qobo!</h1>
+    <h1>Welcome to {{ website_branding.name }}!</h1>
 {% endblock %}
 
 {#
